# gendiff

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
gendiff/: generate_diff.py  generator_of_diff.py  parsing.py  searchDiff.py  test.py
gendiff/Scripts/: gendiff.py
gendiff/formaters/: all_formaters.py  json.py  stylish.py
gendiff/formatters/: plain.py  stylish.py
tests/: tests_of_project.py
