[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Study project..."
authors = ["pavelpminaev <pavelpminaev@gmail.com>"]
repository = "https://github.com/pavelpminaev/python-project-lvl2.git"
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: Freeware",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Topic :: utilities"
]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
