[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = "A program that determines the difference between two data structures."
authors = ["pavelpminaev <pavelpminaev@gmail.com>"]
repository = "https://github.com/pavelpminaev/gendiff.git"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: Freeware",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Topic :: utilities"
]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
mypy = "^1.0.0"
pytest = "^7.2.1"
pip = "^23.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
